# WaveShare-Jetson-ROS2-Rover

./: LICENSE  README.md
cad/Rover-Top-Cover/v1/: Rover-Top-Cover-v1.stl
cad/grd-cover-jetson-mount/: README.md
cad/rover-top-face-reference/: WaveShare-Wave-Rover-Top-Face-Reference-README.md  WaveShare-Wave-Rover-Top-Face-Reference.f3d  WaveShare-Wave-Rover-Top-Face-Reference.step
docs/hardware/: bill-of-materials.md
docs/testing/: 0000-test-logs.md  2026-02-20-session-001-jetson-setup-uart-debugging.md  2026-02-22-session-002-UART-breakthrough.md  2026-02-23-session-003-cad-grd-cover-lidar-mount.md  2026-02-24-session-004-power-architecture-LiDAR-integration-ROS2-motor-control.md  2026-02-27-session-005-URDF-tf2-and-first-SLAM-map.md  2026-02-28-session-006-hardware-assessment-platform-migration.md  2026-03-02-session-007-odometry-calibration.md  2026-03-03-session-008-calibration-script-encoder-swap.md  2026-03-04-session-009-hybrid-odometry-first-proper-slam-map.md  2026-03-09-session-010-heading-hold-velocity-ramp-zupt-slam-tuning.md  2026-03-13-session-011-universal-heading-hold-tune.md
src/ROS2/robot_description/: CMakeLists.txt  package.xml
src/ROS2/robot_description/config/: slam-toolbox.yaml
src/ROS2/robot_description/launch/: description.launch.py  slam.launch.py
src/ROS2/robot_description/urdf/: rover.urdf
src/ROS2/rover-driver/: README.md  package.xml  rover-driver-node.py  setup.py
src/ROS2/rplidar-ros/: README.md
src/scripts/: Serial_Simple_Control.py  UART-Simple-Sanity-Check.py  calibrate_track_width.py
